Adding trim for removing whitespace after entering data, test fixes